--- a/manifests/ingress.yml
+++ b/manifests/ingress.yml
@@ -6,12 +6,11 @@ metadata:
    
   name: gateway-ingress
    
-  # annotations:
-   
+  annotations:
     # nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
-    # nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
-    # nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    
 spec:
    
