--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+black==22.12.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -9,10 +10,15 @@ importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+pathspec==0.10.2
 pika==1.3.1
+platformdirs==2.6.0
 pymongo==4.3.3
 python-dotenv==0.21.0
 requests==2.28.1
+tomli==2.0.1
+typing_extensions==4.4.0
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.10.0
